tests/errors/fsm-exact-too-long.fil
component Main<G>(
  @interface<G, 5> go_G: 1,
  @[G, G+3] + @exact[G, G+2] trig: 1
) -> () {
  fsm M[3](trig);
}
